src/app/components/times/times.component.css
#tableContainer #refreshBtn {
    float: right;
    margin-right: 8px;
    margin-top: 16px;
}

@media screen and (min-width: 960px) {
    #tableContainer {
        margin: 16px auto;
    }    
}

@media screen and (max-width: 959px) {
    #tableContainer th:first-child,
    #tableContainer td:first-child {
        width: 30px;
        padding-left: 8px;
    }

    #tableContainer th:not(:first-child):not(:last-child),
    #tableContainer td:not(:first-child):not(:last-child) {
        padding-right: 8px;
    }

    #tableContainer th:last-child {
        padding-right: 8px;
    }

    /* This will prevent the FAB to hover on the refresh button */
    #tableContainer #refreshBtn {
        margin-bottom: 96px;
    }
}

#tableContainer {
    margin-top: 16px;
}

#tableContainer table {
    width: 100%;
    margin: 0 auto;
}

th.mat-sort-header-sorted {
    color: black;
}

#searchField {
    margin-left: 16px;
    margin-right: 16px;
    margin-top: 16px;
    width: calc(100% - 32px);
}

#deleteFAB {
    position: fixed;
	right: 16px;
	bottom: 16px;
}

